--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
     "normalize.scss": "^0.1.0",
     "vinyl-source-stream": "^1.1.0",
     "vue": "^1.0.12"
+  },
+  "dependencies": {
+    "pretty-bytes": "^3.0.0"
   }
 }
