--- a/package.json
+++ b/package.json
@@ -33,11 +33,11 @@
     "gulp-uglify": "^1.5.1",
     "gulp-util": "^3.0.7",
     "normalize.scss": "^0.1.0",
-    "vinyl-source-stream": "^1.1.0",
-    "pretty-bytes": "^3.0.0"
+    "pretty-bytes": "^3.0.0",
+    "vue": "^1.0.12",
+    "vue-resource": "^0.5.1",
+    "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {
-    "vue": "^1.0.12",
-    "vue-resource": "^0.5.1"
   }
 }
